--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,21 @@
+/*
+
+1.Font face is use to refer d din exp font which is in assets folder 
+
+2. I have converted Font size from px to vw (viewpoint) for same aspect ration when we 
+increase or decrease size i also convert line height to % 
+
+3. I have also converted all spacing and images size from px to % for aspect ratio
+
+*/
+
+
+
 @font-face { 
 	font-family: d din.exp;
 	src: url('assets/d-din.exp.otf') format('opentype'); 
 }
-
+/* Header part css*/
 .header {
 	position: absolute;
 	width: 100%;
@@ -329,8 +342,6 @@ bottom: 0%;
 	letter-spacing: -1px;
 	color: #31333B;
 }
-
-
 .header .signupbutton{
 	position: absolute;
 	width: 13.54%;
@@ -406,6 +417,8 @@ bottom: 0%;
 	left: 36.07%;
 }
 
+
+/* first cta part css*/
 .cta{
 	position: absolute;
 	height: 30.1%;
@@ -451,6 +464,9 @@ bottom: 0%;
 
 }
 
+
+
+/* features first css*/
 .features{	
 	position: absolute;
 	height: 140.4%;
@@ -571,18 +587,6 @@ bottom: 0%;
 	top: 68.68%;
 	width: 20.9%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 .features .grid2{
 	position: absolute;
 	width: 46.66%;
@@ -733,9 +737,6 @@ bottom: 0%;
 	width: 27.78%;
 	top: 35.33%;
 }
-
-
-
 .features .grid2 .textarea .section2{
 	position: absolute;
 	width: 82.089%;	
@@ -770,10 +771,6 @@ bottom: 0%;
 	letter-spacing: -0.2px;
 	color: #7C7B8A;
 }
-
-
-
-
 .features .grid2 .textarea .section3{
 	position: absolute;
 	width: 82.089%;	
@@ -843,8 +840,6 @@ bottom: 0%;
 	letter-spacing: -0.2px;
 	color: #7C7B8A;
 } 
-
-
 .features .grid2 .textarea .section1{
 	position: absolute;
 	width: 82.089%;	
@@ -927,8 +922,7 @@ bottom: 0%;
 
 
 
-
-
+/* Second Cta part css*/
 
 .cta2{
 	position: absolute;
@@ -1017,6 +1011,11 @@ bottom: 0%;
 	height: 35.6%;
 }
 
+
+
+
+
+/* seconf features part css*/
 
 .features2{
 	position: absolute;
@@ -1171,9 +1170,6 @@ bottom: 0%;
 	font-size: 0.9vw;
 	color: #31333B;
 }
-
-
-
 .features2 .areatext .f2grid2{
 	position: absolute;
 	width: 22.625%;
@@ -1331,6 +1327,12 @@ bottom: 0%;
 	letter-spacing: -0.2px;
 	color: #FFFFFF;
 }
+
+
+
+
+/* Third cta part css*/
+
 .cta3{
 	position: absolute;
 	width: 83.33%;
@@ -1400,6 +1402,13 @@ bottom: 0%;
 	text-align: center;
 	letter-spacing: -0.2px;
 }
+
+
+
+
+
+/* frame part css*/
+
 .frame{
 	position: absolute;
 	width: 67.55%;
@@ -1489,9 +1498,6 @@ bottom: 0%;
 	align-self: center;
 	margin: 0px 24px;
 }
-
-
-
 .frame .box2{
 	display: flex;
 	flex-direction: column;
@@ -1542,9 +1548,6 @@ bottom: 0%;
 	align-self: center;
 	margin: 0px 24px;
 }
-
-
-
 .frame .box3{
 	display: flex;
 	flex-direction: column;
@@ -1601,15 +1604,6 @@ bottom: 0%;
 	align-self: center;
 	margin: 0px 24px;
 }
-
-
-
-
-
-
-
-
-
 .frame .box4{
 	display: flex;
 	flex-direction: column;
@@ -1667,9 +1661,6 @@ bottom: 0%;
 	align-self: center;
 	margin: 0px 24px;
 }
-
-
-
 .frame .box5{
 	display: flex;
 	flex-direction: column;
@@ -1720,9 +1711,6 @@ bottom: 0%;
 	align-self: center;
 	margin: 0px 24px;
 }
-
-
-
 .frame .box6{
 	display: flex;
 	flex-direction: column;
@@ -1775,6 +1763,11 @@ bottom: 0%;
 	margin: 0px 24px;
 }
 
+
+
+
+
+/* questions part css*/
 .questions{
 	position: absolute;
 	width: 100%;
@@ -1861,9 +1854,6 @@ bottom: 0%;
 	order: 1;
 	align-self: center;
 }
-
-
-
 .questions .square2{
 	position: absolute;
 	width: 28.125%;
@@ -1911,12 +1901,6 @@ bottom: 0%;
 	order: 1;
 	align-self: center;
 }
-
-
-
-
-
-
 .questions .square3{
 	position: absolute;
 	width: 28.125%;
@@ -1964,8 +1948,6 @@ bottom: 0%;
 	order: 1;
 	align-self: center;
 }
-
-
 .questions .helpbtn{
 	position: absolute;
 	width: 13.5%;
@@ -1996,6 +1978,10 @@ bottom: 0%;
 }
 
 
+
+
+
+/* Fourth cta part css*/
 .cta4{
 	position: absolute;
 	width: 83.33%;
@@ -2035,8 +2021,6 @@ bottom: 0%;
 	letter-spacing: -0.2px;
 	color: #FFFFFF;
 }
-
-
 .cta4 .button1cta4{
 	position: absolute;
 	width: 16.25%;
@@ -2065,7 +2049,6 @@ bottom: 0%;
 	text-align: center;
 	letter-spacing: -0.2px;
 }
-
 .cta4 .button2cta4{
 	position: absolute;
 	width: 23.75%;
@@ -2097,6 +2080,9 @@ bottom: 0%;
 }
 
 
+
+
+/* Download cta part css*/
 .downloadcta{
 	position: absolute;
 	width: 83.33%;
@@ -2193,6 +2179,10 @@ bottom: 0%;
 	color: #31333B;
 }
 
+
+
+
+/* Footer part css*/
 .footer{
 	position: absolute;
 	width: 100%;
@@ -2274,7 +2264,6 @@ bottom: 0%;
 	height: 31.25%;
 	bottom: 52.83%;
 }
-
 .footer .logo1 .text1 .s1{
 position: absolute;
 left: 0%;
@@ -2467,8 +2456,6 @@ bottom: 0%;
 	right: 8.33%;
 	top: 24.334%;
 }
-
-
 .footer .discover .dhead{
 	position: absolute;
 	height: 36px;
@@ -2656,8 +2643,6 @@ bottom: 0%;
 	order: 0;
 	align-self: flex-start;
 }
-
-
 .footer .connect .chead{
 	position: absolute;
 	height: 36px;
@@ -2751,8 +2736,6 @@ bottom: 0%;
 	order: 0;
 	align-self: flex-start;
 }
-
-
 .footer .legal .lhead{
 	position: absolute;
 	height: 36px;
@@ -2830,9 +2813,9 @@ bottom: 0%;
 
 
 
-
-
-@media only screen and (max-width: 900px) {
+/* This is media query css for mobile responsive design*/
+/* min width is 820px*/
+@media only screen and (max-width: 820px) {
  	
 .features2{
 	position: absolute;
