--- a/assets/style.css
+++ b/assets/style.css
@@ -407,7 +407,7 @@ bottom: 0%;
 	width: 47.347%;
 	height: 52.422%;
 	left: 5.83%;
-	top: 45.08%;
+	bottom: 2.49%;
 }
 .group .truck{
 	position: absolute;
@@ -501,7 +501,7 @@ bottom: 0%;
 	font-family: d din.exp;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 0.9vw;
+	font-size: 0.95vw;
 	line-height: 133%;
 	text-align: center;
 	letter-spacing: -0.2px;
@@ -958,7 +958,7 @@ bottom: 0%;
 	font-family: d din.exp;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 0.9vw;
+	font-size: 0.95vw;
 	line-height: 133%;
 	text-align: center;
 	letter-spacing: -0.2px;
@@ -1048,7 +1048,7 @@ bottom: 0%;
 	font-family: d din.exp;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 1.05vw;
+	font-size: 0.95vw;
 	line-height: 133%;
 	text-align: center;
 	letter-spacing: -0.2px;
